# smpark.in

./: .gitignore  .swiftlint.yml  Dockerfile  Makefile  Package.resolved  Package.swift  README.md  app.py  docker-compose.yml  spot.py
.gitea/workflows/: build-and-deploy.yml
Backend/: Cargo.toml  go.mod  go.sum  main.go
Backend/paste/: handlers.go  ratelimit.go  store.go
Backend/src/: api_error.rs  main.rs
Backend/src/paste/: store.rs
Frontend/: package-lock.json  package.json  vite.config.ts
Frontend/src/: App.css  App.tsx  main.tsx
Frontend/src/pages/: Home.tsx  NotFound.tsx  Paste.tsx  PasteView.tsx
Public/: Home.html  Resume.html  feed.xml
Public/.well-known/appspecific/: com.tesla.3p.public-key.pem
Public/Home_files/: Home.css  Home.js
Public/Resume_files/: Resume.js
Public/css/: style.css
Public/themes/black/: Home.html  Resume.html  feed.xml
Resources/Views/: 404.leaf  home.leaf  paste-view.leaf  paste.leaf  privacy.leaf  resume.leaf  welcome.leaf
Sources/App/: Configure.swift  ExpiryLifecycle.swift  PasteHandlers.swift  PasteStore.swift  RateLimiter.swift  Routes.swift  app.swift  boot.swift  configure.swift  routes.swift
Sources/Run/: main.swift
Vapor3.1.10/: Package.swift
backend/: go.mod
backend/paste/: expiry.go
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx
scripts/: sync-themes.sh
smparkin/: ContentView.swift  Log.swift  Server.swift  smparkinApp.swift
smparkin.xcodeproj/: project.pbxproj
smparkin/Views/: home.leaf
templates/: 404.html  home.html  welcome.html
(+35 files in other folders)
