[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.15"
